@@ -25,6 +25,7 @@ source(file.path(base.path, "test_function__gamm.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__gbm.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__glm.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__glmer.r"), encoding = "UTF-8")
+source(file.path(base.path, "test_function__glmmadmb.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__glmmML.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__lm.r"), encoding = "UTF-8")
 source(file.path(base.path, "test_function__lme.r"), encoding = "UTF-8")
