@@ -4,6 +4,7 @@
 	  of predict.
 	- Reconstruct test suites.
 	- Improved predict() method of model.interface classes.
+	- Add support for glmmadmb.
 2017-01-06: 0.0.4
 	- Added support for result of MASS::stepAIC.
 2016-12-31: 0.0.3
